<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fade_gold"
    tools:context=".ui.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/white_curved_shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/white_curved_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:text="@string/enter_your_card_number"
                android:textSize="@dimen/text_size_default"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:padding="14dp"
                android:hint="@string/card_number"
                android:fontFamily="monospace"
                android:background="@drawable/rectangle_lightblack_border"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"/>

            <Button
                android:id="@+id/processButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="monospace"
                android:padding="16dp"
                android:text="@string/process"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:theme="@style/Button.Theme_Button"
                android:textSize="@dimen/text_size_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/editText"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@id/editText" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/processButton"
                app:layout_constraintEnd_toEndOf="@id/processButton"
                app:layout_constraintTop_toTopOf="@id/processButton"
                app:layout_constraintBottom_toBottomOf="@id/processButton"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/mint"
        app:civ_border_color="@color/white"
        app:civ_border_width="6dp"
        app:layout_constraintBottom_toTopOf="@+id/holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/holder" />

</androidx.constraintlayout.widget.ConstraintLayout>